--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -57,15 +57,15 @@
 <div class="modal fade modal-s" id="lp_mgz9Dtl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style=" width: auto;">
 	<div class="modal-dialog modal-baeg max-w1200 ">
 		<div class="modal-content ">
-			<div class="modal-header" style="padding: 0;min-height: 0;">
+			<div class="modal-header lp_mgz9DtlModalHearder" style="padding: 0;min-height: 0;">
 				<div class="baegs">
-				    <div class="close" onclick="closeMgz9Dtl()"><img src="resources/img/ba/icon-end_1.png" /></div>
+				    <div class="close" onclick="closeMgz9Dtl()"><img src="resources/img/ba/icon-end_1.png" style="width:20px;"/></div>
 				</div>
 			</div>
 			
 			<!-- 상세내용 font-size: 15px !important;-->
 			<div  style="display: flex;justify-content: center">
-			<div id="lp_mgz9Dtl_cntnt" style="max-width:810px;" class=" ck-blurred ck ck-content ck-rounded-corners" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
+			<div id="lp_mgz9Dtl_cntnt" style="max-width:900px;padding-left:20px;padding-right:20px;" class=" ck-blurred ck ck-content ck-rounded-corners" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
 				
 <!-- 				<div class="modal-body pd60 h850-o" id="lp_mgz9Dtl_cntnt" style="font:inherit;"></div> -->
 				
