--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -491,8 +491,8 @@ html, body{font-size: calc(100vw / 152);}
 }
 .hd-div:hover .hd-text{display:none;}
 .hd-div .hd-img{
-    width: auto;
-    height: auto;
+    width: 280px;
+    height: 280px;
     position: absolute;
     left: 50%;
     top: 50%;
