--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -329,20 +329,20 @@
       var timer = null;
 
       //Javascript
-      window.addEventListener('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
+//       window.addEventListener('resize', function(){
+//       	clearTimeout(timer);
+//       	timer = setTimeout(function(){
+//       		document.location.reload();
+//       	}, delay);
+//       });
 
       //jQuery
-      $(window).on('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
+//       $(window).on('resize', function(){
+//       	clearTimeout(timer);
+//       	timer = setTimeout(function(){
+//       		document.location.reload();
+//       	}, delay);
+//       });
       
 $(function() {                      
 	artistLibraryList();
