--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -224,20 +224,20 @@
  var timer = null;
 
  //Javascript
- window.addEventListener('resize', function(){
- 	clearTimeout(timer);
- 	timer = setTimeout(function(){
- 		document.location.reload();
- 	}, delay);
- });
+//  window.addEventListener('resize', function(){
+//  	clearTimeout(timer);
+//  	timer = setTimeout(function(){
+//  		document.location.reload();
+//  	}, delay);
+//  });
 
  //jQuery
- $(window).on('resize', function(){
- 	clearTimeout(timer);
- 	timer = setTimeout(function(){
- 		document.location.reload();
- 	}, delay);
- });
+//  $(window).on('resize', function(){
+//  	clearTimeout(timer);
+//  	timer = setTimeout(function(){
+//  		document.location.reload();
+//  	}, delay);
+//  });
  
  $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     // The event won't be propagated up to the document NODE and 
