--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -83,6 +83,8 @@
 		         $("#appDevice").val("PC");
 		     } else {
 		     	 $("#appDevice").val("MOBILE"); 
+		     	 $(".lp_mgz9DtlModalHearder").css("max-width","900px");
+		     	 $("#lp_mgz9Dtl_cntnt").css("max-width","700px");
 		     }
 		});
   </script>
