--- a/src/main/resources/templates/thymeleaf/index_old.html
+++ b/src/main/resources/templates/thymeleaf/index_old.html
@@ -670,20 +670,20 @@
 	  var timer = null;
 	
 	  //Javascript
-	  window.addEventListener('resize', function(){
-	  	clearTimeout(timer);
-	  	timer = setTimeout(function(){
-	  		document.location.reload();
-	  	}, delay);
-	  });
+// 	  window.addEventListener('resize', function(){
+// 	  	clearTimeout(timer);
+// 	  	timer = setTimeout(function(){
+// 	  		document.location.reload();
+// 	  	}, delay);
+// 	  });
 	
 	  //jQuery
-	  $(window).on('resize', function(){
-	  	clearTimeout(timer);
-	  	timer = setTimeout(function(){
-	  		document.location.reload();
-	  	}, delay);
-	  });
+// 	  $(window).on('resize', function(){
+// 	  	clearTimeout(timer);
+// 	  	timer = setTimeout(function(){
+// 	  		document.location.reload();
+// 	  	}, delay);
+// 	  });
 	  
       /* 메뉴바 FIXED */
       if (jQuery(window).width() > 0) {
