--- a/src/main/resources/templates/thymeleaf/result_artist.html
+++ b/src/main/resources/templates/thymeleaf/result_artist.html
@@ -149,20 +149,20 @@ var delay = 300;
 var timer = null;
 
 //Javascript
-window.addEventListener('resize', function(){
- 	clearTimeout(timer);
- 	timer = setTimeout(function(){
- 		document.location.reload();
- 	}, delay);
-});
+// window.addEventListener('resize', function(){
+//  	clearTimeout(timer);
+//  	timer = setTimeout(function(){
+//  		document.location.reload();
+//  	}, delay);
+// });
 
 //jQuery
-$(window).on('resize', function(){
- 	clearTimeout(timer);
- 	timer = setTimeout(function(){
- 		document.location.reload();
- 	}, delay);
-});
+// $(window).on('resize', function(){
+//  	clearTimeout(timer);
+//  	timer = setTimeout(function(){
+//  		document.location.reload();
+//  	}, delay);
+// });
 </script>
     
 	
