--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -599,6 +599,7 @@ $(function() {
 
 function collectionReg(){
 	if(checkValid()){
+		debugger;
 		result.mbrSq = sMbrSqVal;
 		result.artstBirthYear = $("#artstYear").val();
 		result.workPrc = $("#workPrc").val().replaceAll(/,/g, '');
