--- a/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
@@ -236,7 +236,7 @@
 							3) 거래철회비: 다음과 같은 사유가 발생한 경우 회사는 판매자 혹은 구매자에게 판매 혹은 구매철회에 대한수수료를 청구할 것입니다. 회사가 정한 수수료율은 정찰가 혹은 낙찰의 10% (부가세별도)로 정합니다. 거래철회비가 발생하는 경우 회사는 해당 회원에게 거래철회비를 별도로 통보하고 납부 방법을 안내합니다. 회사가 수령한 거래철회비의 30%에 해당하는 금액은 거래취소/철회로 인해 손해를 입은 거래 상대방인 회원에게 지급됩니다.  <br/>
 							- 구매자가 정찰가구매의 경우 구매 의사를 표시한 날 혹은 경매의 경우 낙찰을 받은 날로부터 48시간 이내에 회사가 기재한 청구서의 정찰가 혹은 낙찰가를 완납하지 않아 회사가 구매자에게 최종납입통보를 했음에도 불구하고 그로부터 12시간 이내에 최종적으로 해당 대금이 완납되지 않아 거래가 자동으로 취소된 경우<br/>
 							- 판매자 또는 구매자가 회사의 운송서비스 안내에 대하여 운송서비스 제공 및 일정 조율에 필요한 정보를 48시간 이내에 회신하지 않아 거래가 자동으로 취소된 경우<br/>
-							- 판매자 또는 구매자가 CS센터로부터 운송서비스를 안내 받은 후 48시간 이내에 운송서비스 비용을 결제하지 않아 회사가 판매자 또는 구매자에게 최종납입통보를 했음에도 불구하고 그로부터 12시간 이내에 최종적으로 운송서비스 비용이 완납되지 않아 거래가 자동으로 취소된 경우<br/>
+							- 판매자 또는 구매자가 고객센터로부터 운송서비스를 안내 받은 후 48시간 이내에 운송서비스 비용을 결제하지 않아 회사가 판매자 또는 구매자에게 최종납입통보를 했음에도 불구하고 그로부터 12시간 이내에 최종적으로 운송서비스 비용이 완납되지 않아 거래가 자동으로 취소된 경우<br/>
 							- 회원이 정해진 운송일정에 사전 통지 없이 연락이 두절되거나 판매자 또는 구매자가 미술품 인도 또는 인수 거부를 하여, 회사의 재량에 의하여 거래가 취소된 경우<br/>
 							- 판매자의 미술품 또는 보증서에 허위, 위조, 변조 기타 조작 사실이 발견되어 회사 또는 구매자에 의하여 해당 거래가 취소된 경우<br/>
 							- 판매자가 거래등록한 미술품이 본 약관에 위배되는 물품이어서 회사가 거래를 취소한 경우 <br/>
@@ -251,8 +251,9 @@
 							2. 회사는 낙찰 받은 미술품을 구매하는 회원에게 현금, 카드 기타의 방법으로 매매대금을 결제할 수 있는 방법을 제공합니다. 또한 미술품에 대한 가격의 교란 행위 방지 및 회원 자신의 신용도 조작을 미리 방지하기 위해 일정한 결제 방법만을 허용할 수 있습니다. 회원은 거래체결 청약의 의사표시에 앞서 사전에 결제 수단을 등록할 수 있습니다. 매매 대금의 결제와 관련하여 구매자인 회원이 입력한 정보 및 그 외의 정보와 관련된 문제가 발생한 책임과 부담은 전적으로 구매자인 회원이 가지고 있습니다.<br/> 
 							3. 미술품을 구매한 회원은, 정찰가구매의 경우 구매 의사를 표시한 날 혹은 경매의 경우 낙찰을 받은 날로부터 48시간 이내에 회사가 기재한 청구서의 정찰가 혹은 낙찰가를 완납해야 합니다. 48시간이 경과할 때까지 회원이 정찰가 혹은 낙찰가를 완납하지 않아 회사가 구매자에게 최종납입통보를 하고 그로부터 12시간 이내에 최종적으로 정찰가 혹은 낙찰가가 완납되지 않은 경우 거래는 자동으로 취소됩니다. 거래가 취소된 경우 회사는 거래철회비를 요구할 수 있습니다. <br/>
 							4. 거래철회비는 정찰가 혹은 낙찰가의 10% (부가세별도)이고 그 지급기간은 회사의 요구일로부터 48시간입니다. <br/>
-							5. 회사는 미술품을 구매하는 회원이 거래대금 결제 시 사용한 결제 수단에 대해 정당한 사용권한의 보유 여부를 확인할 수 있으며, 이에 대한 확인이 완료될 때까지 거래 진행을 중지하거나, 확인이 불가한 해당 거래를 취소할 수 있습니다. 특히, 고액결제의 경우 안전을 위해 카드사에서 확인전화를 드릴 수도 있습니다. 확인과정에서 도난 카드의 사용이나 타인 명의의 주문 등 정상적인 주문이 아니라고 판단될 경우 임의로 주문을 정지 및 취소할 수 있습니다.<br/>
-							6. 체크카드 잔액부족, 유효기간이 지난 카드가 등록되어 미술품 구매가 불발된 경우, 타인의 결제로 인한 미술품의 구매실패는 회사가 책임지지 않습니다. 또한 회원이 미술품의 대금결제에 관하여 회원이 입력한 정보와 관련하여 생기는 문제들은 전적으로 해당 회원이 책임을 부담해야 됩니다. <br/><br/>
+							5. 입금기한 내 거래철회비를 미납 시 연체대금 및 가산된 이자를 실제 입금하는 날까지 월 2%의 지연이자가 가산됩니다.<br>
+							6. 회사는 미술품을 구매하는 회원이 거래대금 결제 시 사용한 결제 수단에 대해 정당한 사용권한의 보유 여부를 확인할 수 있으며, 이에 대한 확인이 완료될 때까지 거래 진행을 중지하거나, 확인이 불가한 해당 거래를 취소할 수 있습니다. 특히, 고액결제의 경우 안전을 위해 카드사에서 확인전화를 드릴 수도 있습니다. 확인과정에서 도난 카드의 사용이나 타인 명의의 주문 등 정상적인 주문이 아니라고 판단될 경우 임의로 주문을 정지 및 취소할 수 있습니다.<br/>
+							7. 체크카드 잔액부족, 유효기간이 지난 카드가 등록되어 미술품 구매가 불발된 경우, 타인의 결제로 인한 미술품의 구매실패는 회사가 책임지지 않습니다. 또한 회원이 미술품의 대금결제에 관하여 회원이 입력한 정보와 관련하여 생기는 문제들은 전적으로 해당 회원이 책임을 부담해야 됩니다. <br/><br/>
 							
 							<p>제25조. 미술품에 대한 제한된 보증</p>
 							
@@ -304,9 +305,9 @@
 							3. 회사는 판매자가 미술품을 중복으로 등록하거나 해당 미술품과 상관없는 카테고리에 미술품을 등록하는 행위를 엄격하게 금지하고 있습니다. 이를 적발 시 적발 횟수에 따라 미술품 판매 제한, 판매자 ID 사용중지, 이용제한 등의 조치를 취할 수 있습니다. <br/><br/>
 							
 							<p>제30조의2. 구매자 주의 사항</p>
-							1. 구매자가 구매한 미술품은 구매일로부터 1년간 경매, 갤러리, 개인간 거래 등 어떠한 방식으로든 재판매가 금지됩니다.<br/>
-							2. 구매자가 미술품을 제3자에게 양도하는 경우, 구매자는 그 제3자로 하여금 양수일로부터 1년 이내에 재판매하지 않도록 하여야 합니다. <br/>
-							3. 미술품의 저작권은 창작한 작가에게 있으며 구매자에게 양도되지 않습니다.<br/><br/>
+<!-- 							1. 구매자가 구매한 미술품은 구매일로부터 1년간 경매, 갤러리, 개인간 거래 등 어떠한 방식으로든 재판매가 금지됩니다.<br/> -->
+<!-- 							2. 구매자가 미술품을 제3자에게 양도하는 경우, 구매자는 그 제3자로 하여금 양수일로부터 1년 이내에 재판매하지 않도록 하여야 합니다. <br/> -->
+							1. 미술품의 저작권은 창작한 작가에게 있으며 구매자에게 양도되지 않습니다.<br/><br/>
 							
 							<p>제31조. 회사의 면책</p>
 							
@@ -329,15 +330,15 @@
 							
 							1. 본 약관은 대한민국법을 준거법으로 하며 본 약관 또는 서비스에 관하여 발생하는 회사에 관한 모든 분쟁에 관한 소송은 서울중앙지방법원에 전속적 관할이 있습니다. <br/>
 							2. 회사는 서비스를 이용하는 회원 간 분쟁이 발생하는 경우에 이를 합리적이고 원활히 조정하기 위하여 고객센터 및 1:1 문의 채널, 신고하기 기능을 운영하고 있습니다. <br/>
-							3. 본 서비스를 위반하거나 서비스 이용 시 불편사항이 발생한 경우 @dealing-art.com을 이용하시거나 전화(02-) 또는 Fax(02-)로 알려주시면 성심성의껏 처리해 드리겠습니다.<br/><br/><br/><br/>
+							3. 본 서비스를 위반하거나 서비스 이용 시 불편사항이 발생한 경우 help@dealing-art.com을 이용하시거나 전화(1533-3024) 또는 Fax(02-336-2920)로 알려주시면 성심성의껏 처리해 드리겠습니다.<br/><br/><br/><br/>
 							
 							
-							회사소개<br/>
+							
 							맨션나인 주식회사<br/>
 							소재지: 서울특별시 마포구 성산동 256 3층 <br/>
-							대표이사: 이영선<br/>
+							대표이사: 이영선<br/><br/>
 							 
-							<부칙>
+							● 공고일자: 2022년 5월 31일
 														
 						</div>
 					</div>
