--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -27,7 +27,7 @@
 					<div class="footer-text">
 						<ol>
 							<li>주소 : 03970 서울특별시 마포구 성산동 258-22</li>
-							<li>대표번호 : 070-4267-7371</li>
+							<li>대표번호 : 1533-3024</li>
 							<li>팩스번호 : 02-336-2920</li>
 						</ol>
 					</div>
@@ -46,7 +46,7 @@
 					<div class="footer-text">
 						<ol>
 							<li class="dib af-dn">주소 : 03970 서울특별시 마포구 성산동 258-22</li>
-							<li class="">대표번호 : 070-4267-7371</li>
+							<li class="">대표번호 : 1533-3024</li>
 							<li class="af-dn">팩스번호 : 02-336-2920</li>
 						</ol>
 					</div>
@@ -63,7 +63,7 @@
 					<div class="footer-text">
 						<ol>
 							<li class="dib af-dn">주소 : 03970 서울특별시 마포구 성산동 258-22</li>
-							<li class="dib af-dn">대표번호 : 070-4267-7371</li>
+							<li class="dib af-dn">대표번호 : 1533-3024</li>
 							<li class="af-dn">팩스번호 : 02-336-2920</li>
 							<li class="af-dn">이메일 : cafe24@mainsion9.co,kr</li>
 						</ol>
